Fix: Update send money fix
