# national-bank-mw-core-connector/src/core-connector-svc/dfspCoreConnectorRoutes.ts
@@ -115,6 +115,7 @@ export class DFSPCoreConnectorRoutes extends BaseRoutes {
         try {
             const updateTransferRes = await this.aggregate.updateSendMoney(
                 transferAccept,
+                params.transferId as string
             );
             return this.handleResponse(updateTransferRes, h);
         } catch (error: unknown) {
